# bashtastic-visualizer

./: Cargo.toml  README.md  example.txt
src/: bash_viewr.rs  main.rs  menu.rs
